KULRICE-2056  	 KFSMI-1005
Move properties from LookupFieldDefinition into FieldDefinition, and remove the former class